--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "formik": "^2.4.6",
     "mui-datatables": "^4.3.0",
+    "new_crud": "file:",
     "react": "^18.3.1",
     "react-confirm-pro": "^1.2.2",
     "react-dom": "^18.3.1",
