remove console errors

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 REACT_APP_CLOUDINARY_NAME=dyv7tgtbm
 REACT_APP_CLOUDINARY_API_KEY=411752315724154
 REACT_APP_CLOUDINARY_API_SECRET=YVWd_pQnKK0_HlOaNBoq08nOW0o
+
+MONGO_PRODUCT_ADD=http://localhost:5000/products/add
